--- a/production/pyproject.toml
+++ b/production/pyproject.toml
@@ -12,9 +12,9 @@ dependencies = [
     "celery[redis]",
     "uvicorn",
     "minio",
-    "transformers==4.57.1",
-    "sentencepiece==0.2.1",
-    "torch==2.10.0",
+#    "transformers==4.57.1",
+#    "sentencepiece==0.2.1",
+#    "torch==2.10.0",
 ]
 
 [tool.setuptools]
